2008-08-27  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-common/tracker-ontology.c:
	(tracker_ontology_get_registered_field_types): Removed wrong
	g_critical, the categories can have "empty" parent.
	
2008-08-27  Ivan Frade  <ivan.frade@nokia.com>

	* data/services/default.service
	* data/sqlite-service-types.sql
	* data/sqlite-stored-procs.sql
	* data/sqlite-xesam.sql: Added new field to service type
	description called "PropertyPrefix", so we can specify that
	"Document" properties are "Doc:xxx"
	
	* src/libtracker-common/tracker-service.[ch]
	* src/libtracker-db/tracker-db-manager.c: Code to handle the new
	property.

	* src/libtracker-common/tracker-ontology.[ch]
	(tracker_ontology_get_registered_field_types): Implemented
	properly so now it return the property of the service type and his
	parent. This fixes the GetRegisteredTypes method in the API.
	
	* tests/libtracker-common/tracker-ontology-test.c: Updated tests.
	
2008-08-27  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-metadata-utils.[ch]
	(tracker_metadata_utils_get_thumbnail): Added back thumbnails
	creation.
	(tracker_metadata_utils_get_data): Call it from here.

2008-08-27  Mikael Ottela    <mikael.ottela@ixonos.com>
	* src/trackerd/tracker-rdf-query.c: Fixed a crash. Added
	additional '%' to sql like statements because vsprintf strips some 
	at execute_query level.

2008-08-27  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (tracker_indexer_check_state):
	Actually check the TRACKER_INDEXER_STATE_STOPPED flag...

2008-08-27  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c: Add new
	TRACKER_INDEXER_STATE_STOPPED flag.
	(check_started) (check_stopped): Use that flag.
	(tracker_indexer_init): Call directly tracker_indexer_check_state() to
	setup the idle functions.

2008-08-27  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-index.c (tracker_db_index_flush):